--- a/Buoi1-git.html
+++ b/Buoi1-git.html
@@ -9,6 +9,7 @@
 <body>
     <h1>welcome to our first class</h1>
     <h2>this is where you will build up your base knowledge</h2>
+    <h3>we will start with github</h3>
 </body>
 </html>
 
