lam quen voi html, css

--- a/Buoi2/Buoi2.html
+++ b/Buoi2/Buoi2.html
@@ -31,8 +31,21 @@
         </ul>
         <div>Education</div>
         <ul>
-            <a href="https://mindx.vn/"></a>
+            <li><a href="http://mindx.vn" target="_blank" rel="noopener noreferrer">MindX Technology School</a></li>
         </ul>
+        <div>Experience</div>
+        <ul>
+            <li>Student Technology Intern for Wilton School District</li>
+            <li>Babysitter</li>
+        </ul>
+        <div>Extracurriculars</div>
+        <ul>
+            <li>Recycling Club</li>
+            <li>Gardening Club</li>
+            <li>Book Club</li>
+        </ul>
+        <hr>
+        <a href="https://www.facebook.com/profile.php?id=100029695232442" target="_blank" rel="noopener noreferrer">Contact me</a>
     </div>
 </body>
 
