--- a/Buoi4/Buoi4.html
+++ b/Buoi4/Buoi4.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+    <span id="logo">Conduit</span>
+    <span id="righttab"></span>
     <div class="container">
         <h1 style="display: flex;
         justify-content: space-around;">Sign in</h1>
