--- a/Buoi4/Buoi4.html
+++ b/Buoi4/Buoi4.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,25 +8,51 @@
     <title>Login screen</title>
     <link rel="stylesheet" href="login.css">
 </head>
+
 <body>
-    <span id="logo">Conduit</span>
-    <span id="righttab"></span>
-    <div class="container">
-        <h1 style="display: flex;
-        justify-content: space-around;">Sign in</h1>
-        <h4 style="display: flex;
-        justify-content: space-around;">Need an account?</h4>
-        <form action="action_page.php" method="post"></form>
-        <label for="uname"></label>
-        <input type="text" placeholder="Email" name="uname" required>
-        <br>
-        <label for="psw"></label>
-        <input type="password" placeholder="Password" name="psw" required>
-        <br>
-        <button type="submit">Login</button>
-    <label>
-      <input type="checkbox" checked="checked" name="remember"> Remember me
-    </label>
+    <div>
+        <div class="container-upper">
+            <div class="heading">
+                <h1 style="margin-top: 0px;">Conduit</h1>
+            </div>
+            <div class="task-bar">
+                <style>
+                    ul {
+                        list-style-type: none;
+                        margin: 0;
+                        padding: 0;
+                    }
+
+                    li {
+                        display: inline;
+                    }
+                </style>
+                <ul>
+                    <li>Home</li>
+                    <li>Sign in</li>
+                    <li>Sign up</li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <h1 style="display: flex;
+            justify-content: space-around;">Sign in</h1>
+            <h4 style="display: flex;
+            justify-content: space-around;">Need an account?</h4>
+            <form action="action_page.php" method="post" class="form"></form>
+            <label for="uname"></label>
+            <input type="text" placeholder="Email" name="uname" required>
+            <br>
+            <label for="psw"></label>
+            <input type="password" placeholder="Password" name="psw" required>
+            <br>
+            <button type="submit">Login</button>
+            <label>
+                <input type="checkbox" checked="checked" name="remember"> Remember me
+            </label>
+        </div>
+        <div class="bottom">Fork on GitHub</div>
     </div>
 </body>
+
 </html>
