upload Buoi1-git.html -> Buoi1/Buoi1-git.html upload Buoi4/810313.jpg upload Buoi4/Buoi4.html upload Buoi4/dodge-dodge-challenger-srt-dodge-challenger-dodge-challenger-srt-hellcat-hd-wallpaper-preview.jpg upload Buoi4/login.css upload Buoi6/Buoi6.html upload Buoi6/Buoi6_style.css

--- a/Buoi6/Buoi6.html
+++ b/Buoi6/Buoi6.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in</title>
-    <link rel="stylesheet" href="login.css">
+    <title>Sign up </title>
+    <link rel="stylesheet" href="Buoi6_style.css">
 </head>
 
 <body>
@@ -30,26 +30,33 @@
                 <ul>
                     <li>Home</li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://127.0.0.1:5500/Buoi4/Buoi4.html">Sign in</a></li>
+                        <a class="nav-link" href="http://127.0.0.1:5500/Buoi4/Buoi4.html">Sign in</a>
+                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://127.0.0.1:5500/Buoi6.html">Sign up</a></li>
+                        <a class="nav-link" href="http://127.0.0.1:5500/Buoi6.html">Sign up</a>
+                    </li>
+                </ul>
                 </ul>
             </div>
         </div>
         <div class="container">
-            <h1>Sign in</h1>
+            <h1>Sign up</h1>
             <h4>
-               <a href="http://127.0.0.1:5500/Buoi6.html">Need an account?</a></h4>
+                <a href="http://127.0.0.1:5500/Buoi4/Buoi4.html">Have an account?</a></h4>
             <form action="action_page.php" method="post" class="form"></form>
             <label for="uname"></label>
-            <input type="text" placeholder="Email" name="uname" required>
+            <input type="text" placeholder="Username" name="uname" required>
+            <br>
+            <label for="umail"></label>
+            <input type="text" placeholder="Email" name="umail" required>
             <br>
             <label for="psw"></label>
             <input type="password" placeholder="Password" name="psw" required>
             <br>
-            <button type="submit">Login</button>
+            <button type="submit">Sign up</button>
         </div>
         <div class="bottom">Fork on GitHub</div>
+    </div>
     </div>
 </body>
 
