--- a/Buoi4/Buoi4.html
+++ b/Buoi4/Buoi4.html
@@ -28,7 +28,7 @@
                     }
                 </style>
                 <ul>
-                    <li>Home</li>
+                    <li class="nav-item">Home</li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://127.0.0.1:5500/Buoi4/Buoi4.html">Sign in</a></li>
                     <li class="nav-item">
@@ -39,7 +39,7 @@
         <div class="container">
             <h1>Sign in</h1>
             <h4>
-               <a href="http://127.0.0.1:5500/Buoi6.html">Need an account?</a></h4>
+               <a href="../Buoi6/Buoi6.html">Need an account?</a></h4>
             <form action="action_page.php" method="post" class="form"></form>
             <label for="uname"></label>
             <input type="text" placeholder="Email" name="uname" required>
