--- a/Buoi6/Buoi6.html
+++ b/Buoi6/Buoi6.html
@@ -28,7 +28,7 @@
                     }
                 </style>
                 <ul>
-                    <li>Home</li>
+                    <li class="nav-item">Home</li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://127.0.0.1:5500/Buoi4/Buoi4.html">Sign in</a>
                     </li>
@@ -42,7 +42,7 @@
         <div class="container">
             <h1>Sign up</h1>
             <h4>
-                <a href="http://127.0.0.1:5500/Buoi4/Buoi4.html">Have an account?</a></h4>
+                <a href="../Buoi4/Buoi4.html">Have an account?</a></h4>
             <form action="action_page.php" method="post" class="form"></form>
             <label for="uname"></label>
             <input type="text" placeholder="Username" name="uname" required>
