--- a/Challenge3/Challenge3.html
+++ b/Challenge3/Challenge3.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="Challenge3.css">
 </head>
 <body>
-    <div class="Group"></div>
+    <div class="Group">
+        
+    </div>
     <div class="Maincontainer">
         
     </div>
