--- a/Challenge3/Challenge3.html
+++ b/Challenge3/Challenge3.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="Challenge3.css">
 </head>
 <body>
-    <div class="Group">
-        
-    </div>
+    <div class="Group"></div>
     <div class="Maincontainer">
         
     </div>
