--- a/Finaltest2/CodeChallenge2.html
+++ b/Finaltest2/CodeChallenge2.html
@@ -15,11 +15,12 @@
                 <div class="content">Dự đoán con số của bạn nằm trong khoảng từ 1 đến 10</div>
                 <div class="form">
                     <label for="Picker"></label>
-                    <input type="number" id="Number" placeholder="Number">
-                    <button onclick="">QUAY SỐ</button>
+                    <input type="number" id="Number" placeholder="Nhập con số mà bạn dự đoán">
+                    <button onclick="GuessLuckyNumber()">QUAY SỐ</button>
                 </div>
             </div>
         </div>
+        <script src="CodeChallenge2.js"></script>
 </body>
 
 </html>
